--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,17 @@
     height: 100px;
 }
 
+/* Header : icone retour */ 
+
 .return-icon{
     margin-left: 30px; 
     font-size: 30px;
 }
+
+.display-none{
+    display: none;
+}
+
 
 .cart-icon{
     margin-right: 30px; 
@@ -25,12 +32,6 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 } 
-
-.display-none{
-    display: none;
-}
-
-/* Header : icone retour */ 
 
 
 /* PAGE D'ACCUEIL : vues produits sous forme de cartes cliquables */
@@ -123,3 +124,32 @@ a{
     text-decoration: none;
     color: black;
 }
+
+/* PAGE PRODUIT */ 
+
+.bold{
+    font-weight: bold;
+}
+
+/* Disposition image et description */
+.product-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+@media screen and (min-width: 600px){
+    .product-section{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: flex-start;
+        column-gap: 20px;
+    }
+}
+
+.product__img{
+    height: 200px;
+} 
+
