--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,11 @@ a{
     font-weight: bold;
 }
 
+.product__title{
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+
 /* Disposition image et description */
 .product-section{
     display: flex;
@@ -139,7 +144,7 @@ a{
     align-items: center;
 }
 
-@media screen and (min-width: 600px){
+@media screen and (min-width: 992px){
     .product-section{
         display: flex;
         flex-direction: row;
@@ -150,6 +155,11 @@ a{
 }
 
 .product__img{
-    height: 200px;
+    height: 300px;
 } 
+
+.product__container{
+    width: 50%;
+}
+
 
