--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,8 @@ button{
     border-radius: 20px;
     box-shadow: 2px 3px 5px grey;
     padding: 30px 30px 30px 30px;
-    height: 100px;
+    height: 120px;
+    width: 320px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -243,8 +244,16 @@ button{
     row-gap: 20px;
 }
 
-.popup__title{
-    margin-top: 0;
+.closePopup_icone{
+    position: absolute;
+    margin-top: -120px;
+    margin-right: -310px;
+    transform: scale(1);
+    transition: all 200ms;
+}
+
+.closePopup_icone:hover{
+    transform: scale(1.3);
 }
 
 .popup__cta{
@@ -267,4 +276,36 @@ button{
 
 .popup__btn:hover{
     transform: scale(1.05);
+}
+
+/* --------------------------------- PAGE PANIER -------------------------------- */
+
+.addToCart__btn{
+    background: linear-gradient(to right bottom, #ea7c37, #f06c53, #ee626e, #e25e87, #ce619d, #c660a9, #ba61b6, #aa63c2, #a860d0, #a35dde, #9b5bee, #8f5bfe);
+    color: white;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 10px 10px 10px 10px;
+    box-shadow: 2px 3px 5px grey;
+    transform: scale(1);
+    transition: all 300ms;
+}
+
+.addToCart__btn:hover{
+    transform: scale(1.05);
+}
+
+.cart__details{
+    display: flex; 
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.product__toPurchase{
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: 1fr 2.5fr 2.5fr 0.5fr 2.5fr;
+    column-gap: 20px;
+    font-size: 22px;
 }
