--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body{
     align-items: center;
     margin-left: 20px;
     margin-right: 20px;
+    max-width: 2000px;
 }
 
 @media screen and (min-width: 992px){
@@ -296,6 +297,10 @@ button{
 }
 .cartContent{
     width: 100%;
+    display: flex; 
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 .cart__details{
@@ -303,11 +308,12 @@ button{
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    width: 90%;
 }
 
 .cart__list{
     padding-left: 0;
-    width: 90%;
+    width: 100%;
 }
 
 .product__toPurchase{
@@ -393,7 +399,7 @@ button{
         display: grid;
         grid-template-columns: 2fr 3.5fr 2.5fr 2.5fr 0.5fr 0.5fr 0.5fr 2.5fr;
         column-gap: 20px;
-        font-size: 20px; 
+        font-size: 18px; 
     }
 
     .fa-times{
@@ -446,4 +452,15 @@ button{
         align-self: center;
         justify-self: center;
     }
+}
+
+.cart__totalPrice{
+    justify-self: center;
+    width: 90%;
+}
+
+.cart__total{
+    text-align: end;
+    width: 95%;
+    font-size: 18px;
 }
