--- a/css/style.css
+++ b/css/style.css
@@ -332,7 +332,7 @@ button{
 .product__toPurchase{
     list-style-type: none;
     display: grid;
-    grid-template-columns: 1fr 3.5fr 0.5fr 0.5fr 0.5fr;
+    grid-template-columns: 0.5fr 2.5fr 0.5fr 0.5fr 0.5fr;
     grid-template-rows: auto;
     column-gap: 10px;
     row-gap : 10px;
@@ -366,7 +366,7 @@ button{
     grid-column: 2;
     grid-row-start: 1;
     grid-row-end: 4;
-justify-self: center;
+    justify-self: center;
 }
 
 .cartProduct__name{
@@ -521,12 +521,15 @@ justify-self: center;
 .formContent{
     margin-bottom: 80px;
     width: 90%;
-    border-top: 1px solid grey;
 }
 
 .formContent__title{
     margin-top: 60px; 
     margin-bottom: 60px;
+    border-top: 1px solid grey;
+    padding-top: 30px;
+    width: 100%;
+    text-align: center;
 }
 
 .formInput{
@@ -544,9 +547,8 @@ justify-self: center;
     padding: 30px;
     width: 90%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-auto-rows: auto;
-    column-gap: 20px;
     row-gap: 20px;
 }
 
@@ -570,38 +572,86 @@ justify-self: center;
 }
 
 .orderForm--lastName{
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.orderForm--email{
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column: 1;
     grid-row: 2;
 }
 
-.orderForm--address{
-    grid-column-start: 1;
-    grid-column-end: 3;
+.orderForm--email{
+    grid-column: 1;
     grid-row: 3;
 }
 
-.orderForm--zipCode{
+.orderForm--address{
     grid-column: 1;
     grid-row: 4;
 }
 
+.orderForm--zipCode{
+    grid-column: 1;
+    grid-row: 5;
+}
+
 .orderForm--city{
-    grid-column: 2;
-    grid-row: 4;
+    grid-column: 1;
+    grid-row: 6;
+}
+
+/* Media queries Affichage du formulaire sur desktop */
+@media screen and (min-width: 600px){
+    .order__form{
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: auto;
+        column-gap: 20px;
+        row-gap: 20px;
+    }
+
+    .orderForm--firstName{
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .orderForm--lastName{
+        grid-column: 2;
+        grid-row: 1;
+    }
+    
+    .orderForm--email{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row: 2;
+    }
+    
+    .orderForm--address{
+        grid-column-start: 1;
+        grid-column-end: 3;
+        grid-row: 3;
+    }
+    
+    .orderForm--zipCode{
+        grid-column: 1;
+        grid-row: 4;
+    }
+    
+    .orderForm--city{
+        grid-column: 2;
+        grid-row: 4;
+    }
+    
+}
+
+input{
+    text-decoration: none;
+    outline: none;
+    border: none;
 }
 
 .validateOrder__btn{
     background: linear-gradient(to right bottom, #ea7c37, #f06c53, #ee626e, #e25e87, #ce619d, #c660a9, #ba61b6, #aa63c2, #a860d0, #a35dde, #9b5bee, #8f5bfe);
     color: white;
     font-weight: bold;
+    font-size: 20px;
     border-radius: 10px;
-    padding: 10px 10px 10px 10px;
+    padding: 15px 15px 15px 15px;
     box-shadow: 2px 3px 5px grey;
     transform: scale(1);
     transition: all 300ms;
