Page panier : apparition d'une popup au clic sur ''valider la commande'' si tous les champs du formulaire ne sont pas correctement renseignés

--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,10 @@ button{
     align-items: center;
 }
 
+.formPopupContainer{
+    display: none;
+}
+
 .popup{
     background-color: #F3E9F1;
     border-radius: 20px;
