--- a/css/style.css
+++ b/css/style.css
@@ -649,12 +649,13 @@ input{
     border: none;
 }
 
-.validateOrder__btn{
+/* Style des boutons */
+.cta__btn{
     background: linear-gradient(to right bottom, #ea7c37, #f06c53, #ee626e, #e25e87, #ce619d, #c660a9, #ba61b6, #aa63c2, #a860d0, #a35dde, #9b5bee, #8f5bfe);
     color: white;
     font-weight: bold;
     font-size: 20px;
-    border-radius: 10px;
+    border-radius: 20px;
     padding: 15px 15px 15px 15px;
     box-shadow: 2px 3px 5px grey;
     transform: scale(1);
@@ -663,7 +664,7 @@ input{
     margin-bottom: 80px;
 }
 
-.validateOrder__btn:hover{
+.cta__btn:hover{
     transform: scale(1.05);
 }
 
@@ -673,13 +674,21 @@ input{
     background-color: #F3E9F1;
     width: 100%;
     margin-top: 80px;
-    margin-bottom: 80px;
+    margin-bottom: 30px;
     padding-bottom: 30px;
 }
 
 .underline{
     border-bottom: 1px solid black;
     padding-bottom: 20px;
+}
+
+.orderDetails__container{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 .orderDetails__title{
@@ -691,6 +700,7 @@ input{
 .orderDetails__info{
     padding-left: 0;
     width: 100%;
+    margin-top: 0;
 }
 
 .product__purchased{
@@ -704,7 +714,7 @@ input{
     padding-bottom: 30px;
     border-bottom: 1px solid grey;
     margin-bottom: 30px;
-    width: 50%;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -738,3 +748,28 @@ input{
     margin-bottom: 0;
 }
 
+.orderDetails__totalPrice{
+    text-align: center;
+}
+
+@media screen and (min-width: 992px){
+    .order__container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: flex-start;
+        column-gap: 100px;
+    }
+
+    .orderDetails__title{
+        margin-bottom: 60px;
+    }
+
+    .orderConfirm{
+        width: 80%;
+    }
+}
+
+h3{
+    margin-bottom: 30px;
+}
