--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 body{
-    margin-left: 0;
-    margin-right: 0;
-    margin-top: 0;
+    margin: 0;
 }
 
 /* Header */
@@ -46,6 +44,82 @@ body{
     align-items: center;
     margin-right: 30px; 
 }
+
+/* -------------------------------- FOOTER -------------------------------- */ 
+
+footer{
+    background-color: #F3E9F1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 80px;
+    padding-top: 10px;
+    margin-bottom: 0;
+}
+
+.footer__menu{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.footer__logo{
+    margin-left: 50px;
+    height: 70px;
+}
+
+footer nav{
+    width: 100%;
+    margin-left: 0;
+    padding-left: 0;
+    font-size: 20px;
+}
+
+footer li{
+    list-style: none;
+    padding-left: 0;
+    margin-left: 50px;
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+
+footer ul{
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+@media screen and (min-width: 992px){
+    .footer__menu{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        padding-left: 0;
+
+    }
+
+    footer nav{
+        width: 100%;
+        margin-left: 0;
+        font-size: 18px;
+    }
+
+    footer li{
+        list-style: none;
+        margin-left: 0;
+    }
+
+    footer ul{
+        list-style: none;
+        margin-left: 0;
+    }
+}
+
 
 /* PAGE D'ACCUEIL : vues produits sous forme de cartes cliquables */
 
