Correction vidage localStorage : ajout d'une nouvelle variable et transfert des données avant suppression LS

--- a/css/style.css
+++ b/css/style.css
@@ -267,10 +267,14 @@ button{
     border: none;
 }
 
-/* PAGE PRODUIT */ 
+/* ------------------- PAGE PRODUIT ------------------- */ 
 
 .bold{
     font-weight: bold;
+}
+
+.main-product{
+    display: flex;
 }
 
 /* Disposition image et description */
